--- a/metadata.yaml
+++ b/metadata.yaml
@@ -48,5 +48,6 @@ subjects:
 - !lcsh 'Women''s rights -- United States -- History'
 - !lcsh 'Women''s rights -- History'
 - !lcsh 'Women -- Suffrage -- United States -- History'
+- GITenberg
 title: History of Woman Suffrage, Volume I
 url: http://www.gutenberg.org/ebooks/28020
